--- a/Motor2D/Motor2D.vcxproj
+++ b/Motor2D/Motor2D.vcxproj
@@ -14,7 +14,7 @@
     <ProjectGuid>{2AF9969B-F202-497B-AF30-7BEF9CE8005E}</ProjectGuid>
     <RootNamespace>programacio_2</RootNamespace>
     <ProjectName>Development - Class 11 Handout2</ProjectName>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -76,11 +76,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Entity_Player.cpp" />
     <ClCompile Include="Gui_Button.cpp" />
     <ClCompile Include="Gui_Elements.cpp" />
     <ClCompile Include="Gui_Image.cpp" />
     <ClCompile Include="Gui_Text.cpp" />
     <ClCompile Include="Gui_Window.cpp" />
+    <ClCompile Include="j1EntityController.cpp" />
     <ClCompile Include="j1Fonts.cpp" />
     <ClCompile Include="j1Gui.cpp" />
     <ClCompile Include="j1Main.cpp" />
@@ -100,11 +103,14 @@
     <ClCompile Include="PugiXml\src\pugixml.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="Entity_Player.h" />
     <ClInclude Include="Gui_Button.h" />
     <ClInclude Include="Gui_Elements.h" />
     <ClInclude Include="Gui_Image.h" />
     <ClInclude Include="Gui_Text.h" />
     <ClInclude Include="Gui_Window.h" />
+    <ClInclude Include="j1EntityController.h" />
     <ClInclude Include="j1Fonts.h" />
     <ClInclude Include="j1Gui.h" />
     <ClInclude Include="j1Map.h" />
